Fix alignment issue in Firefox

--- a/app/assets/stylesheets/blocks/search.scss
+++ b/app/assets/stylesheets/blocks/search.scss
@@ -1,6 +1,5 @@
 .search {
   @include flexbox;
-  @include align-items(baseline);
 
   width: 500px;
   padding: 1rem;
